trunk/GuoliceParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g 2010-11-07 18:46:35

package mypackage;

import java.util.Map;
import java.util.HashMap;
import mypackage.Node;
import mypackage.FunctionNode;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class GuoliceParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "MULT", "DIV", "EQUALS", "INCR", "DECR", "LESSTHAN", "GRTRTHAN", "ISEQUAL", "NOTEQUAL", "AND_OP", "OR_OP", "MODULO", "NOT_OP", "CIRCLE", "TEXTBOX", "BUTTON", "BOX", "ID", "INTEGER", "STRING_LITERAL", "LETTER", "DIGIT", "COMMENT", "WS", "'procedure'", "':'", "'('", "')'", "'end'", "'function'", "';'", "','", "':='", "'constant'", "'var'", "'if'", "'then'", "'else'", "'while'", "'loop'", "'exit'", "'when'", "'now'", "'return'", "'int'", "'bool'", "'string'", "'.'", "'Box'", "'Circle'", "'Triangle'", "'Label'", "'OnClick'", "'KeyPress'", "'LeftOf'", "'RightOf'", "'Above'", "'Below'", "'Contains'", "'Intersect'", "'SmallerThan'", "'BiggerThan'", "'EqualTo'"
    };
    public static final int T__68=68;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int LETTER=26;
    public static final int BUTTON=21;
    public static final int EQUALS=8;
    public static final int ID=23;
    public static final int T__61=61;
    public static final int EOF=-1;
    public static final int T__60=60;
    public static final int NOTEQUAL=14;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int BOX=22;
    public static final int T__58=58;
    public static final int STRING_LITERAL=25;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int INCR=9;
    public static final int T__59=59;
    public static final int ISEQUAL=13;
    public static final int PLUS=4;
    public static final int DIGIT=27;
    public static final int COMMENT=28;
    public static final int T__50=50;
    public static final int NOT_OP=18;
    public static final int INTEGER=24;
    public static final int TEXTBOX=20;
    public static final int T__42=42;
    public static final int OR_OP=16;
    public static final int T__43=43;
    public static final int LESSTHAN=11;
    public static final int T__40=40;
    public static final int MODULO=17;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int GRTRTHAN=12;
    public static final int MULT=6;
    public static final int MINUS=5;
    public static final int AND_OP=15;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=29;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int CIRCLE=19;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int DECR=10;
    public static final int DIV=7;

    // delegates
    // delegators


        public GuoliceParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GuoliceParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return GuoliceParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g"; }


    public Node root = null;

    public List<FunctionNode> functionList = new ArrayList<FunctionNode>();


    public void printStructure() {
      
    }



    // $ANTLR start "program"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:64:1: program : ( procedureDec | functionDec | statement )* ;
    public final void program() throws RecognitionException {
        GuoliceParser.statement_return statement1 = null;


         root = new Node("Program");
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:2: ( ( procedureDec | functionDec | statement )* )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:4: ( procedureDec | functionDec | statement )*
            {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:4: ( procedureDec | functionDec | statement )*
            loop1:
            do {
                int alt1=4;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:6: procedureDec
            	    {
            	    pushFollow(FOLLOW_procedureDec_in_program317);
            	    procedureDec();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:21: functionDec
            	    {
            	    pushFollow(FOLLOW_functionDec_in_program321);
            	    functionDec();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:68:35: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_program325);
            	    statement1=statement();

            	    state._fsp--;


            	    	   if((statement1!=null?statement1.node:null) != null) {
            	    	       root.addChild((statement1!=null?statement1.node:null));
            	    	       System.out.println("The statement node is: " + (statement1!=null?statement1.node:null).toString() + "\n");
            	    	   }
            	    	   
            	    	   if((statement1!=null?statement1.nodes:null) != null) {
            	    	       for(int i = 0; i < (statement1!=null?statement1.nodes:null).size(); i++) {
            	                root.addChild((statement1!=null?statement1.nodes:null).get(i));
            	                System.out.println("The variable declaration nodes are: " + (statement1!=null?statement1.nodes:null).toString() + "\n");
            	             }
            	         }
            	         

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

             System.out.println("The root node is: " + root.toString() + "\n");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "procedureDec"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:83:1: procedureDec : 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure' ;
    public final void procedureDec() throws RecognitionException {
        Token ID2=null;
        Map<String, String> parameters3 = null;

        GuoliceParser.statement_return statement4 = null;


         FunctionNode procedureNode; 
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:86:2: ( 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure' )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:86:4: 'procedure' ':' ID '(' ( parameters )? ')' ( statement | exitStatement )* 'end' 'procedure'
            {
            match(input,30,FOLLOW_30_in_procedureDec353); 
            match(input,31,FOLLOW_31_in_procedureDec355); 
            ID2=(Token)match(input,ID,FOLLOW_ID_in_procedureDec357); 
             procedureNode = new FunctionNode((ID2!=null?ID2.getText():null)); 
            match(input,32,FOLLOW_32_in_procedureDec363); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:87:6: ( parameters )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=50 && LA2_0<=52)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:87:7: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_procedureDec366);
                    parameters3=parameters();

                    state._fsp--;

                     procedureNode.setParameters(parameters3); 

                    }
                    break;

            }

            match(input,33,FOLLOW_33_in_procedureDec373); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:88:3: ( statement | exitStatement )*
            loop3:
            do {
                int alt3=3;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:88:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_procedureDec379);
            	    statement4=statement();

            	    state._fsp--;

            	     procedureNode.addChild((statement4!=null?statement4.node:null)); 

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:88:62: exitStatement
            	    {
            	    pushFollow(FOLLOW_exitStatement_in_procedureDec385);
            	    exitStatement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

             procedureNode.setReturnType("void");
            		  functionList.add(procedureNode); 
            match(input,34,FOLLOW_34_in_procedureDec396); 
            match(input,30,FOLLOW_30_in_procedureDec398); 

            }

             System.out.println("The procedure list is: " + functionList + "\n"); 
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "procedureDec"


    // $ANTLR start "functionDec"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:95:1: functionDec : 'function' type ':' ID '(' ( parameters )? ')' ( statement )* returnStatement 'end' 'function' ;
    public final void functionDec() throws RecognitionException {
        Token ID5=null;
        Map<String, String> parameters6 = null;

        GuoliceParser.statement_return statement7 = null;

        GuoliceParser.type_return type8 = null;


         FunctionNode functionNode; 
        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:98:2: ( 'function' type ':' ID '(' ( parameters )? ')' ( statement )* returnStatement 'end' 'function' )
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:98:4: 'function' type ':' ID '(' ( parameters )? ')' ( statement )* returnStatement 'end' 'function'
            {
            match(input,35,FOLLOW_35_in_functionDec422); 
            pushFollow(FOLLOW_type_in_functionDec424);
            type8=type();

            state._fsp--;

            match(input,31,FOLLOW_31_in_functionDec426); 
            ID5=(Token)match(input,ID,FOLLOW_ID_in_functionDec428); 
             functionNode = new FunctionNode((ID5!=null?ID5.getText():null)); 
            match(input,32,FOLLOW_32_in_functionDec434); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:99:6: ( parameters )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=50 && LA4_0<=52)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:99:7: parameters
                    {
                    pushFollow(FOLLOW_parameters_in_functionDec437);
                    parameters6=parameters();

                    state._fsp--;

                     functionNode.setParameters(parameters6); 

                    }
                    break;

            }

            match(input,33,FOLLOW_33_in_functionDec444); 
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:100:3: ( statement )*
            loop5:
            do {
                int alt5=2;
                alt5 = dfa5.predict(input);
                switch (alt5) {
            	case 1 :
            	    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:100:5: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionDec452);
            	    statement7=statement();

            	    state._fsp--;

            	     functionNode.addChild((statement7!=null?statement7.node:null)); 

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_returnStatement_in_functionDec459);
            returnStatement();

            state._fsp--;

            match(input,34,FOLLOW_34_in_functionDec465); 
            match(input,35,FOLLOW_35_in_functionDec467); 
             functionNode.setReturnType((type8!=null?input.toString(type8.start,type8.stop):null));
                                   functionList.add(functionNode); 

            }

             System.out.println("The procedure list is: " + functionList + "\n"); 
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "functionDec"

    public static class statement_return extends ParserRuleReturnScope {
        public Node node;
        public List<Node> nodes;
    };

    // $ANTLR start "statement"
    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:106:1: statement returns [Node node, List<Node> nodes] : ( ';' | assignmentStatement | constantDecStatement | variableDecStatement | ifStatement | whileStatement | procedureCallStatement | guiStatement | evntHandleStatement );
    public final GuoliceParser.statement_return statement() throws RecognitionException {
        GuoliceParser.statement_return retval = new GuoliceParser.statement_return();
        retval.start = input.LT(1);

        Node assignmentStatement9 = null;

        Node constantDecStatement10 = null;

        List<Node> variableDecStatement11 = null;

        Node ifStatement12 = null;

        Node whileStatement13 = null;

        Node procedureCallStatement14 = null;

        GuoliceParser.guiStatement_return guiStatement15 = null;


        try {
            // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:107:2: ( ';' | assignmentStatement | constantDecStatement | variableDecStatement | ifStatement | whileStatement | procedureCallStatement | guiStatement | evntHandleStatement )
            int alt6=9;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:107:4: ';'
                    {
                    match(input,36,FOLLOW_36_in_statement485); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:108:4: assignmentStatement
                    {
                    pushFollow(FOLLOW_assignmentStatement_in_statement490);
                    assignmentStatement9=assignmentStatement();

                    state._fsp--;

                     retval.node = assignmentStatement9;
                    	

                    }
                    break;
                case 3 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:110:4: constantDecStatement
                    {
                    pushFollow(FOLLOW_constantDecStatement_in_statement497);
                    constantDecStatement10=constantDecStatement();

                    state._fsp--;

                     retval.node = constantDecStatement10;
                      	

                    }
                    break;
                case 4 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:112:4: variableDecStatement
                    {
                    pushFollow(FOLLOW_variableDecStatement_in_statement504);
                    variableDecStatement11=variableDecStatement();

                    state._fsp--;


                    	     retval.nodes = variableDecStatement11;
                    	

                    }
                    break;
                case 5 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:115:4: ifStatement
                    {
                    pushFollow(FOLLOW_ifStatement_in_statement511);
                    ifStatement12=ifStatement();

                    state._fsp--;

                     retval.node = ifStatement12; 

                    }
                    break;
                case 6 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:116:4: whileStatement
                    {
                    pushFollow(FOLLOW_whileStatement_in_statement519);
                    whileStatement13=whileStatement();

                    state._fsp--;

                     retval.node = whileStatement13; 

                    }
                    break;
                case 7 :
                    // C:\\Users\\Mahmoud\\Documents\\EclipseWorkspace\\AntlrProject\\src\\mypackage\\Guolice.g:117:4: procedureCallStatement
                    {
                    pushFollow(FOLLOW_procedureCallStatement_in_statement526);
                    procedureCallStatement14=procedureCallStatement();

                    state._fsp--;

                     retval.node = procedureCallStatement14; 

                    }
                    break;
                case 8 :
